# fastsync

./: Cargo.toml  FASTSYNC_DESIGN_SPEC.md  LICENSE  README.md  build_release.sh  install.sh  installer.nsi  publish.sh
.github/workflows/: release.yml
packaging/linux/DEBIAN/: control
packaging/windows/: installer.nsi
pages/: install.sh
src/: config.rs  engine.rs  error.rs  lib.rs  main.rs  protocol.rs  server.rs
src/delta/: block_level.rs  file_level.rs  mod.rs  rolling.rs
src/remote/: agent.rs  agentless.rs  mod.rs
src/scanner/: local.rs  mod.rs
src/transport/: mod.rs  ssh.rs
tests/: remote_test.rs
wix/: main.wxs
