[package]
name = "fastsync"
version = "0.1.16"
edition = "2021"
authors = ["Your Team"]
description = "Fast incremental file sync over SSH"
license = "MIT"
repository = "https://github.com/gux928/fastsync"

[dependencies]
# SSH
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# File system
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"

# Hashing
adler = "1.0"
blake3 = "1.5"

# Compression
zstd = "0.13"

# Progress bar
indicatif = "0.17"
console = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.11.0"
self_update = "0.42.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
